# dead_simple_webserver

./: Cargo.toml  README.md  chat.html
examples/: chat.rs  hello_world.rs
src/: lib.rs  main.rs  test.html
