[package]
name = "dead_simple_webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
render = "0.3.1"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0"
webbrowser = "1.0.1"
strum_macros = "0.26.4"
strum = "0.26.3"
html-macro = "0.2.5"
serde = "1.0.204"
serde_derive = "1.0.204"
httparse = "1.9.4"
